--- a/frontreact/src/styles/_card.scss
+++ b/frontreact/src/styles/_card.scss
@@ -22,6 +22,8 @@
     gap: 0.5rem;
     justify-content: space-between;
     padding: 0.5rem;
+    background: white;
+    border: 0;
   }
 
   &-title {
